src/app/application/deployment-verification/deployment-verification.component.less
.example-form {
    min-width: 40px;
    max-width: 100px;
    width: 100%;
  }
  .example-full-width {
    width: 100%;
  }
  .audit-info{
    padding: 15px;
  }
  .audit-info h4, .audit-info h4 small{
    color: #1b1f2a;
  }
  .audit-info > div{
    padding: 0 20px;
    border-right: 1px #dfdfdf solid;
  }
  .audit-info h4{
    font-size: 20px;
    margin-bottom: 0;
    line-height: 0.8;
  }
  .audit-info h4 small{
    font-size: 14px;
  }
  .audit-info span{
    font-size: 12px;
  }
  .dropdown-menu-filter{
    min-width: 175px;
  }
  .dropdown-footer-border{
    border-top: 1px solid #efeff1;
  }
  .datepickerDiv{
    padding-left: 16px;
  }
  .mp-4{
    padding: 1rem!important;
  }
  .bg-info {
    background-color: #eaeaea !important;
}
.example-container {
  width: 100%;
  min-height: 95vh;
}

.example-sidenav-content {
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: flex-end;
}

.example-sidenav {
  padding: 20px;
}

.mat-drawer-transition .mat-drawer-content {
  transition-duration: 400ms;
  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
  /* transition-property: transform,margin-left,margin-right; */
  background-color: white !important;
}
.mat-drawer-container {
  background-color: #fff !important;
  color: rgba(0,0,0,.87);
}
.mat-button {
  background-color: #ccc !important;
}
.table{
	font-family: 'Open Sans', sans-serif;
}
.table-outline{
	border: 1px solid #e5e7e8;
}
.table-pet-service{
	font-size: 13px;
}
.table-sm-text{
	font-size: 13px;
}
.table-pet-service th, .table-pet-service td{
	padding: 8px 4px;
}
.table-pet-service th{
	border: none !important;
}
.table-pet-service th:first-child, .table-pet-service td:first-child{
	text-align: left;
}
.table-no-bordered td{
	border: none;
}
.table-font-weight-600 td{
	font-weight: 600;
}
.not-attempt td{
	background: #dee2e6;
}
.table-avenir td{
	font-family: 'Avenir Book';
	font-weight: normal;
}
.table-avenir .active-service td{
	font-family: 'Avenir';
	font-weight: 600;
}
.serviceTable{
  td:nth-child(1), td:nth-child(2) {
      width: 100px;
  }
  td:nth-child(3) {
      width: 50px;
  }
  td{
      text-align: left;
      border: 1px solid #ccc;
  }
  .bgDark{
      background-color: #f5f6f7 !important;
      font-weight: bold;
  }
  .bgLight{
      background-color: #f1f1f1;
      color: #666;
      padding: 2px;
  }
  .cv_heighlight {
    font-weight: 700;
  }
}
li{
		cursor: pointer;
	}

tbody{
	a{
		cursor: pointer;
	}
}
.refreshList{
	padding: 9px 10px 5px 12px;;
    font-size: large;
    cursor: pointer;
    color: #0ea4fb;
}

.ngx-charts-outer {
  display: table;
  .ngx-charts {
      float: left !important;
      position: relative !important;
      display: table-footer-group;
  }
  
  .chart-legend {
      width: 100% !important;
      display: table-header-group;
  }
}
.service-selection{
  cursor: pointer;
}
.service-count {
  padding: 20px;
}
.analysisMainDiv{
  width: -webkit-fill-available;
}
.summaryToggleBtn{
  text-align: end;
  button{
    outline: none !important;
  }
}
.mat-drawer-inner-container{
  overflow: hidden !important;
}
.app-status {
  padding:10px;
}
.appName
{
    display: flex;
   
    font-family: Avenir;
}
.inlineBlock
{
  display: inline-block;
}
.app-status
{
  width: 100%;
  display: inline-block;
  padding-left: 0px !important;
  padding-bottom: 0px;
}
.logAndMetricTabs
{
  padding-right: 0px !important;
}
.paddingNone
{
  padding-left: 0px;
  padding-right: 0px;
}
paddingLeftRight5
{
  padding-left: 5px;
  padding-right: 5px;
}
.ScoreWidth
{
  width: 120px;
}
.widthDetailScore
{
  width: 250px;
}
.ml20
{
  margin-left: 20px;
}
.widthDetailScoreLogs
{
  width: 300px;
}
.padding5LeftRight
{
  padding-left: 5px;
  padding-right: 5px;;
}
.padding10LeftRight
{
  padding-left: 10px;
  padding-right: 10px;;
}
.fa-stop {
  color: #dc3545; 
}
.fa-spinner {
  color: #999;
}
.showElementHover {
	cursor: pointer !important;
}
.ico16 {
  font-size: 14px;
}
.fa-spin {
  color: #999;
}
.stop-icon {
  padding: 3px;
}
.high
{
  color:red;
}
.lightRed
{
  color:#a32133 !important;
}
.modal-width
{
  max-width: 100% !important;
  width: 80% !important;
  min-height: 400px;
}

